k8s_deploy/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: $APP_NAME
spec:
  ports:
  - port: $SERVER_PORT
    targetPort: $SERVER_PORT
  selector:
    app: $APP_NAME
