k8s_deploy/03-destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: $APP_NAME
spec:
  host: $APP_NAME
  subsets:
    - name: $APP_VERSION
      labels:
        version: $APP_VERSION
